Implement identifier validation for several identifiers we either pass directly to SWF, or use to synthesize an identifier passed to SWF.
Switch to a hash of the partitionId in activityIds so that partition IDs can contain arbitrary data (e.g. ARNs).

https://github.com/danielgmyers/flux-swf-client/issues/37